[package]
name = "si_format"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "format numbers using metric prefixes"
repository = "https://github.com/m-mueller678/si_format"
readme = "readme.md"
keywords = ["format","human","number","pretty","si-units"]
categories = ["value-formatting","embedded","no-std::no-alloc","development-tools"]
exclude = [
    "check.sh",
]

[features]
default = ["std","float64"]
std=[]
float32=[]
float64=["float32"]

[dependencies]
libm = { version = "0.2.8",optional = true }

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]